= Version descriptions

== master

- Can remember already started (but not yet stopped) sleeps on system restart
- Can show duration of each past sleep

== 2.0

- Can import previously exported data
- Notification icon is now in sync with the launcher icon
- Runtime baseline is now only API 22 (Android 5.1), not API 26 to cover about 80% of devices

== 1.0

- Initial release
- Can store past sleeps
- Can count average duration of them