@@ -4,6 +4,7 @@
 
 - Can remember already started (but not yet stopped) sleeps on system restart
 - Can show duration of each past sleep
+- Can delete past recorded sleeps selectively
 
 == 2.0
 
